[#11249] add path to UiActionRequest

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -607,6 +607,8 @@ components:
         code:
           description: Code of the executed UI action.
           type: string
+        path:
+          type: string
         identifier:
           description: |
             Identifier of UI element, or UI action, where action is performed (for example treeNode's / 
