[#9573] fix bug: linkedObject reference was not present

--- a/api-domain/src/main/resources/descriptors/sample-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sample-api.yaml
@@ -51,6 +51,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/SampleLinkObject'
+        singleLink:
+          $ref: '#/components/schemas/SampleLinkObject'
         keyWords:
           type: array
           items:
