[#9573] Implicit inline object kezelés - test

--- a/api-domain/src/main/resources/descriptors/sample-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sample-api.yaml
@@ -106,6 +106,9 @@ components:
       properties:
         name:
           type: string
+        categoryType:
+          type: string
+          format: uri
     SampleDataSheet:
       type: object
       properties:
