[#9798] move back widgetModels to View

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -331,7 +331,7 @@ components:
     ViewContext:
       type: object
       description: The same session can be valid / used in multiple UIs, this object represents a UI.
-      required: [uri,views,viewWidgetModels]
+      required: [uri,views]
       properties:
         uri:
           type: string
@@ -343,12 +343,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/View'
-        viewWidgetModels:
-          type: string
-          additionalProperties:
-            type: string
-            additionalProperties:
-              type: object
         openPendingData:
           $ref: '#/components/schemas/OpenPendingData'
     ViewContextData:
@@ -376,7 +370,7 @@ components:
             $ref: '#/components/schemas/ComponentModelChange'
     View:
       type: object
-      required: [uuid,viewName,state,type,parameters,closedChildrenViews,downloadableItems,actions]
+      required: [uuid,viewName,state,type,parameters,closedChildrenViews,downloadableItems,actions,widgetModels]
       properties:
         uuid:
           type: string
@@ -417,6 +411,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/UiAction'
+        widgetModels:
+          type: string
+          additionalProperties:
+            type: object
         valueSets:
           type: string
           additionalProperties:
