[#10819] uiActionDialogDescriptor got new property: mask

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -758,6 +758,8 @@ components:
           type: string
         text:
           type: string
+        mask:
+          type: string
         actionButton:
           $ref: '#/components/schemas/UiActionButtonDescriptor'
         cancelButton:
