--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -21,7 +21,7 @@ components:
       description: |
         The object definition can be defined by some API definition language like OpenApi or so. On the backend the result is java class that describes all
         the properties and contained object definitions also.
-      required: [uri, properties]
+      required: [uri, qualifiedName, properties, outgoingReferences]
       properties:
         uri:
           type: string
@@ -85,15 +85,11 @@ components:
           description: |
             The default widget definition for the given property. It can be empty but in this case we must have another option to setup the
             widget for a layout.
-        valueSetSchema:
+        valueSet:
           type: string
+          format: uri
           description: |
-            The name of the default value set schema for the given property. It can overridden at object definition level and can
-            be specified also at objkect instance level. It is not required if empty then the value set is global.
-        valueSetName:
-          type: string
-          description: |
-            The name of the default value set for the given property. It can overridden at object definition level and can
+            The default value set schema for the given property. It can overridden at object definition level and can
             be specified also at objkect instance level. It is not required if empty then the value set is global.
     ReferenceDefinitionData:
       type: object
