[#11622] add params to UiTreeState

--- a/api-domain/src/main/resources/descriptors/uitree-api.yaml
+++ b/api-domain/src/main/resources/descriptors/uitree-api.yaml
@@ -336,6 +336,11 @@ components:
             type: string
         defaultSelection:
           $ref: '#/components/schemas/UiTreeDefaultSelection'
+        params:
+          description: |
+            Additional parameters for tree. 
+          type: object
+          additionalProperties: true
     UiTreeNode:
       type: object
       required: [classes, children, actions]
