[#11546] add defaultRowActions to GridModel

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -257,6 +257,10 @@ components:
           items:
             type: integer
             format: int32
+        defaultRowActions:
+          type: array
+          items:
+            type: string
     GridServerModel:
       type: object
       description: |
