--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -169,6 +169,13 @@ components:
           description: |
             The version number of the given node. It is filled by the retrieve so if we create a new node
             then it is 0 by default.
+        lastModified:
+          type: integer
+          format: int64
+          default: -1
+          description: |
+            The last modification time in long. It is filled by the retrieve so if we create a new node then it is 
+            -1 by default.
         state:
           $ref: '#/components/schemas/ObjectNodeState'
         objectAsMap:
