[#11366] MasterDataManagementApi - basic implementation

--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -27,6 +27,7 @@ smartbit4all {
   		"PropertyDefinitionData": "org.smartbit4all.api.object.bean.PropertyDefinitionData",
   		"SmartLayoutDefinition": "org.smartbit4all.api.formdefinition.bean.SmartLayoutDefinition",
   		"SmartWidgetDefinition": "org.smartbit4all.api.formdefinition.bean.SmartWidgetDefinition",
+  		"InvocationRequest": "org.smartbit4all.api.invocation.bean.InvocationRequest",
   	]
   }
 }
