[#11935] UserListPageApi - platform bff-api impl for local user mgmt

--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -15,6 +15,7 @@ smartbit4all {
   		"BinaryContent": "org.smartbit4all.api.binarydata.BinaryContent",
   		"BinaryContentData": "org.smartbit4all.api.attachment.bean.BinaryContentData",
   		"UserActivityLog": "org.smartbit4all.api.session.bean.UserActivityLog",
+  		"User": "org.smartbit4all.api.org.bean.User",
     	"LocalDateTime": "java.time.LocalDateTime",
     	"LocalDate": "java.time.LocalDate",
     	"LocalTime": "java.time.LocalTime",
