--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'api'
 include 'api-domain'
 include 'api-cli-rest'
 include 'api-srv-rest'
+include 'bff-api'
 include 'sql'
 include 'json'
 include 'ui-api'
